argocd-argo-rollouts-repo/base/bluegreen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-active-svc
  namespace: default
spec:
  selector:
    app: myapp
    track: blue
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-preview-svc
  namespace: default
spec:
  selector:
    app: myapp
    track: blue
  ports:
    - port: 80
      targetPort: 80
