argocd-argo-rollouts-repo/base/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-stable-svc
  namespace: default
spec:
  selector:
    app: myapp
    track: canary
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary-svc
  namespace: default
spec:
  selector:
    app: myapp
    track: canary
  ports:
    - port: 80
      targetPort: 80
